# blind_llama_client

./: .readthedocs.yaml  README.md  mkdocs.yml
client/: README.md  pyproject.toml
client/blind_llama/: __init__.py  client.py  completion.py  errors.py  logging.py  request_adapters.py  verify.py
client/blind_llama/pb/: licensing_pb2_grpc.py
client/blindllama/: client.py  errors.py
client/blindllama/pb/: __init__.py  licensing_pb2.py
client/proto/: licensing.proto
docs/: generate_api_reference.sh  index.md  notebook_seo.sh
docs/blind_llama/: completion.html  errors.html  index.html  logging.html  request_adapters.html  verify.html
docs/blind_llama/pb/: index.html  licensing_pb2.html  licensing_pb2_grpc.html
docs/docs/advanced-security/: overview.md  whitepaper.md
docs/docs/blind_llama/: architecture.md  trust-model.md
docs/docs/concepts/: TCB.md  TPMs.md  attested-tls.md  hardened-environments.md  overview.md
docs/docs/getting-started/: blindllama-101.md  concepts.md  how-we-achieve-zero-trust.md  how-we-protect-your-data.md  quick-tour.ipynb  quick-tour.md
docs/material_theme_customization/: main.html
docs/pdoc_template/: head.mako  logo.mako
docs/stylesheets/: extra.css
